fix: endpoint name
